styles.css
html {
    scroll-behavior: smooth;
}


/* Colors and Backgrounds */

body {
    background-color: #f9fafb;
    opacity: 1;
    background-image: radial-gradient(#d2d5d8 2px, transparent 2px), radial-gradient(#d2d5d8 2px, #f9fafb 2px);
    background-size: 80px 80px;
    background-position: 0 0, 40px 40px;
    color: #222F3E;
}

#faq,
#system,
#intro {
    background-attachment: fixed !important;
    background-position: center !important;
}

.download_page section {
    background-color: transparent !important;
    padding-bottom: 0;
}

.download_page_text span {
    font-weight: 700;
}

ul {
    padding-inline-start: 20px;
}

.download_page_no_marker {
    list-style: none;
}

.release_notes {
    display: block;
    padding: 1.563em 0 0 0;
    text-align: center;
}

.download_page h2 {
    width: 100%;
    text-align: center;
    margin-block-end: 0em;
}

.download_button {
    background-color: #222F3E;
    width: 14.119em;
    padding: 0.813em 1.375em;
    border-radius: 0.892vw;
    text-decoration: none;
    color: #FFFF;
    font-weight: 700;
    box-shadow: 0px 5px #d62196;
    transition: box-shadow .5s ease !important;
    text-align: center;
    margin: 0 0.625em;
}

.download_button:hover {
    box-shadow: 0 0 0px 2px #d62196;
}

#home_release_notes {
    font-size: 0.833vw !important;
    padding-left: 1em;
    padding-right: 0em !important;
}

#download_section {
    padding-top: 2.8em;
}

#features label .right img,
#features label .left img {
    width: inherit;
    border: none;
}

#faq div.top {
    background: transparent;
    text-align: right;
    position: relative;
    margin: 0 auto;
    padding: 0 5em 0 0;
    top: 12.4em;
    width: -webkit-fill-available;
}

#faq div.top a {
    text-decoration: none;
    color: #ffff;
}

#faq div.top a img {
    margin-bottom: -0.313em;
    margin-right: -0.25em;
}

header,
nav,
#menu,
footer,
section:nth-of-type(odd),
#compare li,
#features figcaption,
#features .left,
#features .right,
#mac a figure {
    background-color: #222F3E;
}

#compare h2,
#features h2,
#faq div,
#faq label {
    color: #222F3E;
}

a {
    color: #FB9300;
    text-decoration: underline;
}

.dash {
    color: #d62196;
}

#faq div {
    color: #222F3E;
}

#features img {
    border: solid 0.625em #222F3E;
}

nav a,
footer,
label[for="toggle"],
#toggle,
#intro,
#system,
#compare ul,
#faq h2,
#features figcaption,
#features label,
#windows,
#linux,
#plugins {
    color: #ffffff;
}

#compare h3 {
    color: #222F3E;
}

#faq label,
#faq div,
#download figure,
#plugins a:link {
    background: white;
}

#download_section {
    background: transparent;
}

#intro,
#windows {
    background: url(img/backgrounds/header_bg.png);
}

#system,
#linux {
    background: url(img/backgrounds/system_bg.png);
}

#faq,
#plugins {
    background: url(img/backgrounds/footer_bg.png);
}

#system,
#intro,
#faq,
#windows,
#linux,
#plugins {
    background-size: cover;
    background-repeat: no-repeat;
}

nav label {
    text-shadow: 0 0 2px rgba(0, 0, 0, 1);
}

#download a:hover img,
#download a:focus img {
    filter: hue-rotate(287deg) brightness(.8);
}

#download figure:hover {
    opacity: .9;
}

#plugins a,
#nightly a {
    box-shadow: 0px 3px 2px #d62196;
    background-color: #222F3E;
}

#plugins a:hover,
#plugins a:focus #nightly a:hover,
#nightly a:focus {
    opacity: .9;
}


/* Fonts */

body {
    font-family: 'Rubik', sans-serif;
    font-weight: 300;
}

#intro h1 {
    font-size: 5.952vw;
    font-weight: 900;
    margin: 0;
}

h2 {
    font-size: 4.166vw;
    font-weight: 900;
}

#features figcaption {
    font-weight: 300;
    font-size: 2.678vw;
}

nav li li a {
    font-weight: 300;
}

#intro p {
    font-size: 2.380vw;
    font-weight: 300;
    padding-right: 2.932em;
}

.nomarker {
    list-style: none;
    margin-block-start: 0em;
    margin-block-end: 0em;
    padding-inline-start: 0px;
    padding-left: 10vw;
    padding-right: 10vw;
}

.marker {
    list-style-type: circle;
    list-style-position: inside;
}

a:hover,
a:focus {
    text-decoration: none;
}

.bold,
#compare .bold {
    font-weight: 600;
}

#compare li {
    border-radius: 0.313em;
    font-weight: 300;
}

#features .left,
#features .right {
    font-size: 6vw;
}

#download figure {
    margin: 0;
}

#download figcaption {
    text-align: center;
}

[class^="bi-"]::before,
[class*=" bi-"]::before {
    font-weight: inherit !important;
}

#menu_icon {
    font-size: 0.7em;
}

#faq_icon {
    font-size: 1.6em;
    color: #222F3E;
}


/* Flexible Layout */

body,
header,
nav ul,
.flex,
#intro div,
#system,
#compare,
#features,
#faq,
#features figure,
#linux,
#mac,
#windows,
#download aside,
#plugins,
#nightly,
#mac div,
#download_section,
.download_page,
.download_page_text,
.download_buttons {
    display: flex;
}

body,
#menu,
#intro div,
#system,
#faq,
#features,
#download aside,
#nightly,
.download_page {
    flex-flow: column;
}

main {
    flex-grow: 1;
}

header,
#system,
#compare,
#features,
#faq,
#features figure,
#features .left,
#features .right,
#mac,
#linux,
#windows,
#download aside,
#plugins,
#nightly,
#mac div,
#download_section,
.download_page,
.download_page_text {
    align-items: center;
}

nav ul,
#system,
#compare,
#features,
#faq,
#features figure,
#features .left,
#features .right,
#mac,
#linux,
#windows,
#download aside,
#plugins,
#mac div,
#download_section,
.download_page {
    justify-content: space-around;
}

#intro div,
#linux,
#nightly,
.download_page_text {
    justify-content: center;
}

#intro div {
    align-items: flex-start;
}

#compare,
#features figure,
#mac,
#linux,
#windows,
#plugins,
#mac div,
#download_section,
.download_page {
    flex-wrap: wrap;
}

#faq label {
    font-weight: 600;
}


/* Dropdown menu */

nav ul {
    list-style: none;
    padding-inline-start: 0;
    margin: 0;
}
/* ... */

